[package]
name = "gtk-debug"
version = "0.1.0"
edition = "2024"
description = "CLI tool for interacting with GTK4 applications via debug socket"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
gtk-layout-inspector = { path = "../../lib/gtk-layout-inspector", features = ["server"] }
